--- a/project1/style.css
+++ b/project1/style.css
@@ -1,13 +1,13 @@
 @font-face{
-	src: url('../fonts/NunitoSans/NunitoSans-Regular.ttf');
+	src: url('fonts/NunitoSans/NunitoSans-Regular.ttf');
 	font-family: "NunitoSans Regular";
 }
 @font-face{
-	src: url('../fonts/NunitoSans/NunitoSans-Italic.ttf');
+	src: url('fonts/NunitoSans/NunitoSans-Italic.ttf');
 	font-family: "NunitoSans Italic";
 }
 @font-face{
-	src: url('../fonts/YesevaOne/YesevaOne-Regular.ttf');
+	src: url('fonts/YesevaOne/YesevaOne-Regular.ttf');
 	font-family: "YesevaOne Regular";
 }
 *{
@@ -98,12 +98,13 @@ header a:hover{
 	font-family: YesevaOne Regular;
 	font-size:40px;
 	text-transform: uppercase;
+	font-weight: normal;
 }
 .homeTxt{
 	position: relative;
 	top:194px;
 	left:134px;
-	width: 576px;
+	max-width: 576px;
 	z-index: 2;
 }
 
@@ -166,6 +167,7 @@ header a:hover{
 }
 h2{
 	font-size: 27px;
+	font-weight: normal;
 }
 .font14{
 	font-size: 14px;
@@ -176,6 +178,7 @@ h2{
 h3{
 	font-size: 18px;
 	width: 100%;
+	font-weight: normal;
 }
 .txt p{
 	font-size: 13px;
@@ -210,7 +213,7 @@ h3{
 	height: 1074px;
 }
 #img1{
-	background:url("../images/repairL.png");
+	background:url("images/repairL.png");
 }
 .relative{
 	position: relative;
@@ -287,17 +290,20 @@ section{
 	justify-content: center;
 }
 .imgRe{
-	background:url("../images/imgRe.jpg");
+	background:url("images/imgRe.jpg");
+	background-size: 100% 100%;
 }
 .imgOver{
-	background:url("../images/imgOver.jpg");
+	background:url("images/imgOver.jpg");
+	background-size: 100% 100%;
 }
 .imgDes{
-	background:url("../images/imgDes.jpg");
+	background:url("images/imgDes.jpg");
+	background-size: 100% 100%;
 }
 .repairType{
 	width: 392px;
-	height: 420px;
+	max-height: 420px;
 }
 .wrap{
 	flex-wrap: wrap;
@@ -316,16 +322,18 @@ section{
 }
 .list{
 	background-color: white;
+	padding-top:25px;
 	margin-top: 290px;
-	width: 330px;
+	width: 84%;
 	height: 286px;
 	text-align:left;
+	box-shadow: 4px 3px 2px rgb(230,230,230);
 }
 .column{
 	flex-direction: column;
 }
 .margin{
-	margin-top:5px;
+	margin-top:9.5px;
 }
 .half{
 	width: 530px;
@@ -354,7 +362,7 @@ section{
 form{
 	margin-top:150px;
 	width: 530px;
-	height: 530px;
+	height: 500px;
 	padding-top:28px;
 	padding-left: 49px;
 	padding-right: 49px;
@@ -369,12 +377,12 @@ form :last-child {
 	justify-content: flex-end;
 }
 .paddingRight{
-	padding-right: 140px;
+	padding-right: 220px;
 	text-align: left;
 }
 .photos{
 	padding-top: 138px;
-	padding-left:99px;
+	padding-left: 40px;
 	z-index: 1;
 }
 .height864{
@@ -395,22 +403,22 @@ form :last-child {
 }
 .image1{
 	top:-113px;
-	left:985px;
+	left:885px;
 	z-index: 1;
 }
 .image2{
 	top:200px;
-	left:985px;
+	left:885px;
 	z-index: 1;
 }
 .image3{
 	top:556px;
-	left:587px;
+	left:487px;
 	z-index: 1;
 }
 .image4{
 	top:-41px;
-	left:587px;
+	left:487px;
 	z-index: 1;
 }
 .height1100{
@@ -437,6 +445,12 @@ form :last-child {
 	width:145px;
 	top:38px;
 	left: -20px;
+	box-shadow: 4px 3px 2px rgb(230,230,230);
+}
+.birka{
+	background-color: #E3B873;
+	padding: 4% 4% 4% 4%;
+	width: 70%;
 	box-shadow: 4px 3px 2px rgb(230,230,230);
 }
 .marginR{
@@ -475,13 +489,19 @@ form :last-child {
 	z-index: 1;
 }
 .width442{
-	width:442px;
+	max-width:442px;
 }
 .visib{
 	display:none;
 }
 .width817{
 	max-width: 817px;
+}
+.margin-bot{
+	margin-bottom: -50px;
+}
+.width-680{
+	max-width: 680px;
 }
 @media screen and (max-width: 1300px){
 	.invis{
@@ -550,7 +570,8 @@ form :last-child {
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		max-height: 800px
+		max-height: 800px;
+		max-width: 600px;
 	}
 	.negMargin{
 		margin-top:-300px;
@@ -568,6 +589,7 @@ form :last-child {
 	}
 	.height1650{
 		max-height: 2800px;
+		min-height: 1800px;
 	}
 	input[type="text"]{
 	border-bottom: 1px solid white;
@@ -592,11 +614,12 @@ form :last-child {
 		margin-bottom: -200px;
 		justify-content: center;
 		align-content: space-between;
-		min-height: 1500px;
+		min-height: 1700px;
 	}
 	.repairType{
-		min-width: 300px;
-		min-height: 400px;
+		margin-bottom: 0px;
+		max-width: 394px;
+		min-width: 330px;
 	}
 	.photos{
 		padding: 0;
@@ -606,6 +629,9 @@ form :last-child {
 		max-width: 640px;
 		padding:0;
 
+	}
+	.list{
+		max-width: 340px;
 	}
 	.height953{
 		margin-top:-500px;
